# org-oc

./: CMAKE_BUILD_GUIDE.md  CMakeLists.txt
.devcontainer/: devcontainer.json
.github/workflows/: cogci.yml  cogserv.yml  ocmin.yml  ocog.yml  opencog.yml  optimal-build (1).yml  optimal-build.yml  single-job-build.yml
.github/workflows-disabled/: ci-org-gen-2.yml  ci-org-gen-3.yml  ci-org-gen.yml  cogci.yml  cogutil-test-2.yml  cogutil-test.yml  oc-cogutil.yml  ocall.yml  oci-atomspace.yml  oci-cogutil.yml  oci.yml  opencog-ecosystem-build.yml  sync.yml
.gitpod/: DEPLOYMENT_IMPROVEMENTS.md  README.md  TROUBLESHOOTING.md  deploy.sh  setup.sh
.ona/: automations.yaml
agents/: CMakeLists.txt
agents/examples/: CMakeLists.txt
agents/scm/: CMakeLists.txt
agents/scm/pair-agent/: CMakeLists.txt
atomspace-agents/lib/: CMakeLists.txt
atomspace-bridge/opencog/persist/bridge/: CMakeLists.txt
atomspace-metta/opencog/atoms/metta/: CMakeLists.txt
atomspace-rpc/src/: CMakeLists.txt
atomspace-storage/: CMakeLists.txt
atomspace-storage/lib/: AtomSpaceStorageConfig.cmake.in  CMakeLists.txt
atomspace-storage/opencog/persist/api/: CMakeLists.txt
atomspace-storage/opencog/persist/api/cython/: CMakeLists.txt
atomspace-storage/opencog/persist/csv/: CMakeLists.txt
atomspace-storage/opencog/persist/file/: CMakeLists.txt
atomspace-storage/opencog/persist/json/: CMakeLists.txt
atomspace-storage/opencog/persist/prolog/: CMakeLists.txt
atomspace-storage/opencog/persist/proxy/: CMakeLists.txt
atomspace-storage/opencog/persist/sexcom/: CMakeLists.txt
atomspace-storage/opencog/persist/sexpr/: CMakeLists.txt
atomspace-storage/opencog/persist/tlb/: CMakeLists.txt
atomspace/lib/: AtomSpaceConfig.cmake.in  CMakeLists.txt
benchmark/atomspace/: AtomSpaceBenchmark.cc
cognitive-cities/: README.md  SYSTEM5_CNS_MAPPING.md  __init__.py
cognitive-cities/cerebral-triad/: __init__.py  output_service.py  processing_director.py  processing_service.py  thought_service.py
cognitive-cities/cognitive-core/: __init__.py
cognitive-cities/cognitive-core/shared_libraries/: __init__.py  atomspace_manager.py  membrane_controller.py
cognitive-cities/deployment/kubernetes/: README.md  autonomic-triad-deployment.yaml  cerebral-triad-deployment.yaml  integration-hub-deployment.yaml  somatic-triad-deployment.yaml
cognitive-cities/integration-hub/: __init__.py
cognitive-cities/integration-hub/api_gateway/: __init__.py  api_gateway.py
cognitive-cities/integration-hub/event_bus/: __init__.py  event_bus.py
cognitive-cities/somatic-triad/: motor_control_service.py
cognitive-cities/tests/: test_basic_structure.py  test_triad_integration.py
cogserver/: CMakeLists.txt
cogserver/lib/: CMakeLists.txt
cogutil/: CMakeLists.txt
dimensional-embedding/: CMakeLists.txt
dimensional-embedding/opencog/dimensional-embedding/: DimEmbedModule.cc  DimEmbedModule.h
linkgrammar-relex-web/: requirements.txt
moses/lib/: CMakeLists.txt
opencog/: CMakeLists.txt
opencog/opencog/neighbors/: CMakeLists.txt
opencog/opencog/nlp/sureal/: SuRealPMCB.cc
opencog/opencog/nlp/wsd/: CMakeLists.txt
pln/lib/: CMakeLists.txt
scripts/: create_cmake_configs.py
sensory/opencog/cython/: CMakeLists.txt
ure/lib/: CMakeLists.txt
ure/opencog/cython/opencog/: backwardchainer.pyx  forwardchainer.pyx  logger.pyx
visualization/: CMakeLists.txt
visualization/opencog/dotty/: DottyModule.cc  DottyModule.h
visualization/opencog/tulip/: TulipWriter.cc
